--- a/ese2021-project-scaffolding/scaffolding/backend/package.json
+++ b/ese2021-project-scaffolding/scaffolding/backend/package.json
@@ -15,7 +15,6 @@
     "@types/cors": "^2.8.7",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
@@ -23,8 +22,7 @@
     "multer": "^1.4.3",
     "save": "^2.4.0",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0",
-    "stripe": "^8.191.0"
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
