--- a/ese2021-project-scaffolding/scaffolding/frontend/angular.json
+++ b/ese2021-project-scaffolding/scaffolding/frontend/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
+                "input": "bern-theme.scss"
+              },
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
